--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Post-Apocalyptique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css">
-    <link href="./src/index.css" rel="stylesheet" />
+    <link href="src/index.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -15,15 +15,15 @@
 
             <div class="middlepage">
 
-                <h2 class="fw-light text-white m-0 align-middle">The Border | Apocalyptic Serveur</h2>
-                <p class="">Rejoignez-nous dans cette aventure où l'humanité se bat pour sa survie et pour un avenir
-                    meilleur.</p>
+                <h2 class="fw-light text-white m-0 align-middle">Your server name</h2>
+                <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                </p>
 
             </div>
         </div>
 
         <div class="footer">
-            <p>Crée par Arsenic, Ov3r & Akaiz</p>
+            <p>Name of Founder</p>
         </div>
 
 </body>
